fix: fixed several bugs in the backend regarding correct methods and references